# torch_nlm

./: LICENSE  README.md  benchmark.py  benchmark_3d.py  plot_benchmark_results.ipynb  pyproject.toml  requirements.txt  setup.py  test-skimage.py  test.py  test_with_random_image.py
torch_nlm/: __init__.py  apply_2d_ops.py  apply_3d_ops.py  base_ops.py
